# repo_cartographer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: current_state.md  layer-00.md  layer-01.md  layer-02.md  layer-03.md  layer-04.md  layer-05.md  layer-06.md  layer-07.md  plan.md
src/repo_cart/: __init__.py  cli.py
src/repo_cart/adapters/: base.py
src/repo_cart/adapters/common/: deps_adapter.py  entry_points_adapter.py  gitignore.py  test_coverage_adapter.py
src/repo_cart/adapters/js_ts/: eslint_adapter.py  tsc_adapter.py
src/repo_cart/adapters/python/: radon_adapter.py
src/repo_cart/adapters/vcs/: git_activity_adapter.py
src/repo_cart/core/: orchestrator.py  renderer.py  walker.py
tests/: test_cli.py  test_orchestrator.py  test_renderer.py  test_walker.py
tests/adapters/: test_eslint.py  test_radon.py  test_tsc.py
tests/adapters/common/: test_deps_adapter.py  test_entry_points_adapter.py  test_test_coverage_adapter.py
tests/adapters/vcs/: test_git_activity_adapter.py
tests/fixtures/python-sample/: sample.py
tests/fixtures/simple-python/: pyproject.toml
tests/fixtures/simple-python/tests/: test_core.py
tests/fixtures/ts-colocated/: package.json
tests/fixtures/ts-colocated/src/: Button.test.tsx
tests/fixtures/ts-sample/: package.json  sample.ts  tsconfig.json
