[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-cart"
version = "0.1.0"
description = "Layered CLI repo mapper — terminal summary, markdown, and JSON from a single scan"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cli", "repo", "analysis", "developer-tools"]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "radon>=6.0",  # needed to run radon adapter tests locally
]

[project.scripts]
repo-cart = "repo_cart.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_cart"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["fixtures"]

[tool.coverage.run]
source = ["src/repo_cart"]
omit = ["tests/*"]
